--- a/poli-meets-ui/package.json
+++ b/poli-meets-ui/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ng-matero/extensions": "^15.5.0",
     "@types/aos": "^3.0.4",
     "aos": "^2.3.4",
     "rxjs": "~7.8.0",
