Added part of administration page

--- a/poli-meets-core/src/main/resources/config/application.yml
+++ b/poli-meets-core/src/main/resources/config/application.yml
@@ -3,6 +3,11 @@ spring:
     change-log: classpath:/config/liquibase/master.xml
   application:
       name: core-service
+  kafka:
+    producer:
+      bootstrap-servers: localhost:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
 eureka:
   client:
