--- a/poli-meets-core/build.gradle
+++ b/poli-meets-core/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.0.4'
+    implementation 'org.springframework.kafka:spring-kafka:2.8.0'
 }
 
 dependencyManagement {
