--- a/feedback-service/build.gradle
+++ b/feedback-service/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
     implementation 'org.springframework.kafka:spring-kafka:2.8.0'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 }
 
