--- a/mentorship-service/build.gradle
+++ b/mentorship-service/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 
 
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'org.springframework.kafka:spring-kafka:2.8.0'
+
 }
 
 dependencyManagement {
