--- a/mentorship-service/src/main/resources/config/application.yml
+++ b/mentorship-service/src/main/resources/config/application.yml
@@ -3,6 +3,15 @@ spring:
     change-log: classpath:/config/liquibase/master.xml
   application:
     name: mentorship-service
+  kafka:
+    consumer:
+      bootstrap-servers: localhost:9092
+      group-id: mentorship-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: "*"
 
 eureka:
   client:
